Fix icons and chart rendering bugs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -85,7 +85,7 @@
                 <!-- 質押與收益卡片 -->
                 <div class="glass-card staking-card gold-border">
                     <div class="card-header">
-                        <img src="https://img.icons8.com/isometric/50/gold-bars.png" alt="stake" />
+                        <img src="https://img.icons8.com/isometric/50/coins.png" alt="stake" />
                         <h3 data-i18n="stake_title">質押挖礦 (Staking)</h3>
                     </div>
                     <div class="apy-badge">APY: 18.5%</div>
@@ -154,7 +154,8 @@
         </div>
     </footer>
 
-    <!-- Ethers.js v6 -->
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/6.11.1/ethers.umd.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
