Fix wallet connection and add icons to UI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,7 @@
                     <option value="en">English</option>
                 </select>
                 <button id="connect-wallet" class="btn-connect">
+                    <img src="https://img.icons8.com/isometric/30/wallet.png" alt="wallet-icon" class="btn-icon">
                     <span class="btn-text" data-i18n="nav_connect">連接錢包</span>
                     <div class="dot"></div>
                 </button>
