Fix icons and localize to Traditional Chinese (Taiwan)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,11 +44,11 @@
                 <div class="resource-buttons">
                     <a href="https://github.com/huchialun9-ctrl/AEG.git" target="_blank" class="btn-outline">
                         <img src="https://img.icons8.com/ios-glyphs/30/github.png" alt="github" />
-                        <span data-i18n="btn_github">查看 GitHub 倉庫</span>
+                        <span data-i18n="btn_github">查看 GitHub 存放庫</span>
                     </a>
                     <a href="../docs/index.html" target="_blank" class="btn-outline">
                         <img src="https://img.icons8.com/ios-glyphs/30/document.png" alt="doc" />
-                        <span data-i18n="btn_docs">專案開發文檔</span>
+                        <span data-i18n="btn_docs">開發文件中心</span>
                     </a>
                 </div>
             </section>
