Emergency fix: improve wallet connection logic and update title version v1.0.1

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aegis (AEG) | 頂級加密安全協議</title>
+    <title>Aegis (AEG) | 頂級加密安全協議 V1.0.1</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="manifest" href="manifest.json">
