Force cache refresh with versioned markers and explain rejection

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aegis (AEG) | 頂級加密安全協議 V1.0.1</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Aegis (AEG) </title>
+    <link rel="stylesheet" href="style.css?v=1.0.1">
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="manifest" href="manifest.json">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Poppins:wght@700&display=swap"
@@ -192,7 +192,7 @@
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/6.11.1/ethers.umd.min.js"></script>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="app.js?v=1.0.1"></script>
 </body>
 
 </html>
